--- a/public/style.css
+++ b/public/style.css
@@ -6070,3 +6070,9 @@ img {
 	color: #ffffff;
 	background-color: #242424;
 }
+#avatar {
+	vertical-align: middle;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+  }
