--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,16 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+#monForm {
+  position:center;
+   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+ 
+}
 
 .App-header {
   background-color: #282c34;
