--- a/public/style.css
+++ b/public/style.css
@@ -1217,7 +1217,7 @@ Version:1.0
 }
 .hero-slider .single-slider {
 	height: auto;
-	background-image: url('/images/1.jpg');
+	background-image: url('/images/sbs.jpg');
 	background-size: cover;
 	background-position: center;
 	background-repeat: no-repeat;
