--- a/public/style.css
+++ b/public/style.css
@@ -6510,3 +6510,23 @@ img {
   .method-card {
 	margin-right: 1em;
   }
+
+
+.auction .single-widget {
+	margin-top: 30px;
+	background: #F6F7FB;
+	padding: 30px;
+}
+.auction .single-widget:first-child {
+	margin-top: 0;
+}
+.auction .single-widget .title {
+	position: relative;
+	font-size: 18px;
+	font-weight: 500;
+	text-transform: capitalize;
+	margin-bottom: 25px;
+	display: block;
+	border-bottom: 1px solid #ddd;
+	padding-bottom: 15px;
+}
